implentación de documentacion JAR